--- a/css/style.css
+++ b/css/style.css
@@ -81,17 +81,23 @@ header{
   margin-bottom: 50px;
 }
 
-.business-plan-container:nth-of-type(2){
-  margin: 0 90px;
+.business-plan-container.col-3-9{
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
-.business-plan-container.col-3-9{
+.business-plan-container.col-3-9 .business-plan-content{
   min-height: 1300px;
 }
 
 .business-plan-container.col-9-9{
   margin: 80px 0 150px;
-  position:relative;
+  border: 1px solid gray;
+  position: relative;
+}
+
+.business-plan-container.col-9-9 .business-plan-content{
+  position: relative;
 }
 
 .business-plan-container.col-9-9 a{
@@ -114,6 +120,14 @@ header{
 
 .partner-text-section p{
   padding-bottom: 30px;
+}
+
+.operation-container img{
+  width:100%;
+}
+
+.operation-container p{
+  margin-top: 20px;
 }
 
 
@@ -144,17 +158,16 @@ header{
   right:0;
 }
 
-.business-plan-container{
-  border: 1px solid gray;
+.business-plan-content{
+  border:1px solid gray;
+  
 }
 
-.business-plan-header{
-  border-bottom: 1px solid gray;
-}
 
 .business-plan-header{
   text-align: center;
   padding: 10px;
+  border-bottom: 1px solid gray;
 }
 
 .business-plan-body{
@@ -162,3 +175,15 @@ header{
  
 }
 
+.operation-container{
+  margin:0;
+}
+
+.operation-container-content{
+  padding:0;
+}
+
+.business-plan-panels{
+  margin-left: -40px;
+  margin-right: -40px
+}
